--- a/index.html
+++ b/index.html
@@ -36,16 +36,36 @@
         <main class="battle-arena">
             <div class="player-zone p2-zone">
                 <div class="player-label">CPU</div>
-                <div id="p2-card-slot" class="card-slot">
-                    <!-- Card injected here -->
+                <div class="zone-content">
+                    <div id="p2-card-slot" class="card-slot">
+                        <!-- Card injected here -->
+                    </div>
+
+                    <div class="history-container p2-history-container">
+                        <div id="p2-history" class="history-grid"></div>
+                        <div class="score-display">
+                            <span class="label">CPU Sum</span>
+                            <span id="p2-score" class="score-value">0</span>
+                        </div>
+                    </div>
                 </div>
             </div>
 
             <div class="vs-badge">VS</div>
 
             <div class="player-zone p1-zone">
-                <div id="p1-card-slot" class="card-slot">
-                    <!-- Card injected here -->
+                <div class="zone-content">
+                    <div id="p1-card-slot" class="card-slot">
+                        <!-- Card injected here -->
+                    </div>
+
+                    <div class="history-container p1-history-container">
+                        <div class="score-display">
+                            <span class="label">My Sum</span>
+                            <span id="p1-score" class="score-value">0</span>
+                        </div>
+                        <div id="p1-history" class="history-grid"></div>
+                    </div>
                 </div>
                 <div class="player-label">YOU</div>
             </div>
@@ -53,25 +73,9 @@
             <div id="message-area" class="message-area"></div>
         </main>
 
-        <!-- Right Panel: Scores & History -->
-        <aside class="panel right-panel">
-            <div class="panel-header">
-                <h2>Total Value</h2>
-            </div>
-
-            <div class="score-board">
-                <div class="score-card p2-score">
-                    <span class="label">CPU Sum</span>
-                    <span id="p2-score" class="score-value">0</span>
-                    <div id="p2-history" class="history-grid"></div>
-                </div>
-                <div class="score-card p1-score">
-                    <span class="label">My Sum</span>
-                    <span id="p1-score" class="score-value">0</span>
-                    <div id="p1-history" class="history-grid"></div>
-                </div>
-            </div>
-
+        <!-- Right Panel: Simulation Stats (Hidden mostly) -->
+        <aside class="panel right-panel" style="display: none;">
+            <!-- Hidden for now as requested layout changes logic -->
             <div id="sim-stats" class="simulation-stats hidden">
                 <h3>Results</h3>
                 <div class="stat-row">
