Refactor: War.0 Layout with 6x6 grid

--- a/index.html
+++ b/index.html
@@ -21,17 +21,11 @@
             </div>
 
             <div class="controls-area">
-                <!-- Moved Draw Button Here (Above Deck) -->
-                <button id="draw-btn" class="btn primary-action">
-                    DRAW CARD
-                </button>
+                <!-- Draw Button Moved to Center -->
             </div>
 
             <div class="deck-area">
-                <!-- Deck Below -->
-                <div class="deck-stack">
-                    <span class="deck-label">DECK</span>
-                </div>
+                <!-- Deck Removed -->
             </div>
 
             <div class="secondary-controls">
@@ -76,6 +70,9 @@
                     </div>
                 </div>
                 <div class="player-label">YOU</div>
+                <button id="draw-btn" class="btn primary-action" style="margin-top: 1rem; width: 100%;">
+                    DRAW CARD
+                </button>
             </div>
 
             <div id="message-area" class="message-area"></div>
