--- a/index.html
+++ b/index.html
@@ -36,43 +36,121 @@
 
         <!-- Center Panel: Battle Arena -->
         <main class="battle-arena">
-            <div class="player-zone p2-zone">
-                <div class="player-label">CPU</div>
-                <div class="zone-content">
-                    <div id="p2-card-slot" class="card-slot">
-                        <!-- Card injected here -->
-                    </div>
-
-                    <div class="history-container p2-history-container">
-                        <div id="p2-history" class="history-grid"></div>
-                        <div class="score-display">
-                            <span class="label">CPU Sum</span>
-                            <span id="p2-score" class="score-value">0</span>
+            <!-- Lane Left -->
+            <div class="lane lane-left">
+                <div class="lane-title">LEFT LANE</div>
+                <div class="player-zone p2-zone">
+                    <div class="zone-content">
+                        <div class="history-container p2-history-container">
+                            <div id="p2-history-left" class="history-grid"></div>
+                            <div class="score-display">
+                                <span class="label">Sum</span>
+                                <span id="p2-score-left" class="score-value">0</span>
+                            </div>
+                        </div>
+                        <div id="p2-card-slot-left" class="card-slot">
+                            <!-- Card injected here -->
                         </div>
                     </div>
+                </div>
+
+                <div class="lane-vs">VS</div>
+
+                <div class="player-zone p1-zone">
+                    <div class="zone-content">
+                        <div id="p1-card-slot-left" class="card-slot">
+                            <!-- Card injected here -->
+                        </div>
+                        <div class="history-container p1-history-container">
+                            <div class="score-display">
+                                <span class="label">Sum</span>
+                                <span id="p1-score-left" class="score-value">0</span>
+                            </div>
+                            <div id="p1-history-left" class="history-grid"></div>
+                        </div>
+                    </div>
+                    <button id="draw-btn-left" class="btn primary-action lane-btn">
+                        LEFT
+                    </button>
                 </div>
             </div>
 
-            <div class="vs-badge">VS</div>
-
-            <div class="player-zone p1-zone">
-                <div class="zone-content">
-                    <div id="p1-card-slot" class="card-slot">
-                        <!-- Card injected here -->
-                    </div>
-
-                    <div class="history-container p1-history-container">
-                        <div class="score-display">
-                            <span class="label">My Sum</span>
-                            <span id="p1-score" class="score-value">0</span>
+            <!-- Lane Center -->
+            <div class="lane lane-center">
+                <div class="lane-title">CENTER LANE</div>
+                <div class="player-zone p2-zone">
+                    <div class="zone-content">
+                        <div class="history-container p2-history-container">
+                            <div id="p2-history-center" class="history-grid"></div>
+                            <div class="score-display">
+                                <span class="label">Sum</span>
+                                <span id="p2-score-center" class="score-value">0</span>
+                            </div>
                         </div>
-                        <div id="p1-history" class="history-grid"></div>
+                        <div id="p2-card-slot-center" class="card-slot">
+                            <!-- Card injected here -->
+                        </div>
                     </div>
                 </div>
-                <div class="player-label">YOU</div>
-                <button id="draw-btn" class="btn primary-action" style="margin-top: 1rem; width: 100%;">
-                    DRAW CARD
-                </button>
+
+                <div class="lane-vs">VS</div>
+
+                <div class="player-zone p1-zone">
+                    <div class="zone-content">
+                        <div id="p1-card-slot-center" class="card-slot">
+                            <!-- Card injected here -->
+                        </div>
+                        <div class="history-container p1-history-container">
+                            <div class="score-display">
+                                <span class="label">Sum</span>
+                                <span id="p1-score-center" class="score-value">0</span>
+                            </div>
+                            <div id="p1-history-center" class="history-grid"></div>
+                        </div>
+                    </div>
+                    <button id="draw-btn-center" class="btn primary-action lane-btn">
+                        CENTER
+                    </button>
+                </div>
+            </div>
+
+            <!-- Lane Right -->
+            <div class="lane lane-right">
+                <div class="lane-title">RIGHT LANE</div>
+                <div class="player-zone p2-zone">
+                    <div class="zone-content">
+                        <div class="history-container p2-history-container">
+                            <div id="p2-history-right" class="history-grid"></div>
+                            <div class="score-display">
+                                <span class="label">Sum</span>
+                                <span id="p2-score-right" class="score-value">0</span>
+                            </div>
+                        </div>
+                        <div id="p2-card-slot-right" class="card-slot">
+                            <!-- Card injected here -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="lane-vs">VS</div>
+
+                <div class="player-zone p1-zone">
+                    <div class="zone-content">
+                        <div id="p1-card-slot-right" class="card-slot">
+                            <!-- Card injected here -->
+                        </div>
+                        <div class="history-container p1-history-container">
+                            <div class="score-display">
+                                <span class="label">Sum</span>
+                                <span id="p1-score-right" class="score-value">0</span>
+                            </div>
+                            <div id="p1-history-right" class="history-grid"></div>
+                        </div>
+                    </div>
+                    <button id="draw-btn-right" class="btn primary-action lane-btn">
+                        RIGHT
+                    </button>
+                </div>
             </div>
 
             <div id="message-area" class="message-area"></div>
