Checkpoint: Before Military UI Overhaul

--- a/index.html
+++ b/index.html
@@ -41,32 +41,32 @@
                 <div class="lane-title">LEFT LANE</div>
                 <div class="player-zone p2-zone">
                     <div class="zone-content">
+                        <div id="p2-card-slot-left" class="card-slot">
+                            <!-- Card injected here -->
+                        </div>
                         <div class="history-container p2-history-container">
-                            <div id="p2-history-left" class="history-grid"></div>
                             <div class="score-display">
                                 <span class="label">Sum</span>
                                 <span id="p2-score-left" class="score-value">0</span>
                             </div>
-                        </div>
-                        <div id="p2-card-slot-left" class="card-slot">
-                            <!-- Card injected here -->
+                            <div id="p2-history-left" class="history-grid"></div>
                         </div>
                     </div>
                 </div>
 
-                <div class="lane-vs">VS</div>
+                <div class="lane-diff" id="diff-left">0</div>
 
                 <div class="player-zone p1-zone">
                     <div class="zone-content">
-                        <div id="p1-card-slot-left" class="card-slot">
-                            <!-- Card injected here -->
-                        </div>
                         <div class="history-container p1-history-container">
+                            <div id="p1-history-left" class="history-grid"></div>
                             <div class="score-display">
                                 <span class="label">Sum</span>
                                 <span id="p1-score-left" class="score-value">0</span>
                             </div>
-                            <div id="p1-history-left" class="history-grid"></div>
+                        </div>
+                        <div id="p1-card-slot-left" class="card-slot">
+                            <!-- Card injected here -->
                         </div>
                     </div>
                     <button id="draw-btn-left" class="btn primary-action lane-btn">
@@ -80,32 +80,32 @@
                 <div class="lane-title">CENTER LANE</div>
                 <div class="player-zone p2-zone">
                     <div class="zone-content">
+                        <div id="p2-card-slot-center" class="card-slot">
+                            <!-- Card injected here -->
+                        </div>
                         <div class="history-container p2-history-container">
-                            <div id="p2-history-center" class="history-grid"></div>
                             <div class="score-display">
                                 <span class="label">Sum</span>
                                 <span id="p2-score-center" class="score-value">0</span>
                             </div>
-                        </div>
-                        <div id="p2-card-slot-center" class="card-slot">
-                            <!-- Card injected here -->
+                            <div id="p2-history-center" class="history-grid"></div>
                         </div>
                     </div>
                 </div>
 
-                <div class="lane-vs">VS</div>
+                <div class="lane-diff" id="diff-center">0</div>
 
                 <div class="player-zone p1-zone">
                     <div class="zone-content">
-                        <div id="p1-card-slot-center" class="card-slot">
-                            <!-- Card injected here -->
-                        </div>
                         <div class="history-container p1-history-container">
+                            <div id="p1-history-center" class="history-grid"></div>
                             <div class="score-display">
                                 <span class="label">Sum</span>
                                 <span id="p1-score-center" class="score-value">0</span>
                             </div>
-                            <div id="p1-history-center" class="history-grid"></div>
+                        </div>
+                        <div id="p1-card-slot-center" class="card-slot">
+                            <!-- Card injected here -->
                         </div>
                     </div>
                     <button id="draw-btn-center" class="btn primary-action lane-btn">
@@ -119,32 +119,32 @@
                 <div class="lane-title">RIGHT LANE</div>
                 <div class="player-zone p2-zone">
                     <div class="zone-content">
+                        <div id="p2-card-slot-right" class="card-slot">
+                            <!-- Card injected here -->
+                        </div>
                         <div class="history-container p2-history-container">
-                            <div id="p2-history-right" class="history-grid"></div>
                             <div class="score-display">
                                 <span class="label">Sum</span>
                                 <span id="p2-score-right" class="score-value">0</span>
                             </div>
-                        </div>
-                        <div id="p2-card-slot-right" class="card-slot">
-                            <!-- Card injected here -->
+                            <div id="p2-history-right" class="history-grid"></div>
                         </div>
                     </div>
                 </div>
 
-                <div class="lane-vs">VS</div>
+                <div class="lane-diff" id="diff-right">0</div>
 
                 <div class="player-zone p1-zone">
                     <div class="zone-content">
-                        <div id="p1-card-slot-right" class="card-slot">
-                            <!-- Card injected here -->
-                        </div>
                         <div class="history-container p1-history-container">
+                            <div id="p1-history-right" class="history-grid"></div>
                             <div class="score-display">
                                 <span class="label">Sum</span>
                                 <span id="p1-score-right" class="score-value">0</span>
                             </div>
-                            <div id="p1-history-right" class="history-grid"></div>
+                        </div>
+                        <div id="p1-card-slot-right" class="card-slot">
+                            <!-- Card injected here -->
                         </div>
                     </div>
                     <button id="draw-btn-right" class="btn primary-action lane-btn">
