--- a/index.html
+++ b/index.html
@@ -32,125 +32,113 @@
                 <button id="sim-btn" class="btn secondary">Simulate</button>
                 <button id="reset-btn" class="btn tertiary">Reset</button>
             </div>
+
+            <!-- Sidebar Results -->
+            <div id="sidebar-results" class="sidebar-results">
+                <!-- Injected via JS -->
+            </div>
         </aside>
 
         <!-- Center Panel: Battle Arena -->
         <main class="battle-arena">
-            <!-- Lane Left -->
-            <div class="lane lane-left">
-                <div class="lane-title">LEFT LANE</div>
-                <div class="player-zone p2-zone">
-                    <div class="zone-content">
-                        <div id="p2-card-slot-left" class="card-slot">
-                            <!-- Card injected here -->
-                        </div>
-                        <div class="history-container p2-history-container">
-                            <div class="score-display">
-                                <span class="label">Sum</span>
-                                <span id="p2-score-left" class="score-value">0</span>
-                            </div>
-                            <div id="p2-history-left" class="history-grid"></div>
-                        </div>
+            <!-- Left Flank -->
+            <div class="lane" id="lane-left">
+                <div class="lane-header">
+                    <div class="lane-title">LEFT FLANK</div>
+                    <div class="lane-shortcut">A</div>
+                </div>
+
+                <div class="battle-zone">
+                    <!-- CPU (Top) -->
+                    <div class="unit-zone p2-unit">
+                        <div id="p2-card-slot-left" class="card-slot"></div>
+                        <div class="score-tag p2-score" id="p2-score-left">0</div>
+                    </div>
+
+                    <!-- History (Middle / No Man's Land) -->
+                    <div class="history-trench">
+                        <div id="p2-history-left" class="history-grid p2-history"></div>
+                        <div class="diff-badge" id="diff-left">0</div>
+                        <div id="p1-history-left" class="history-grid p1-history"></div>
+                    </div>
+
+                    <!-- Player (Bottom) -->
+                    <div class="unit-zone p1-unit">
+                        <div class="score-tag p1-score" id="p1-score-left">0</div>
+                        <div id="p1-card-slot-left" class="card-slot"></div>
                     </div>
                 </div>
 
-                <div class="lane-diff" id="diff-left">0</div>
-
-                <div class="player-zone p1-zone">
-                    <div class="zone-content">
-                        <div class="history-container p1-history-container">
-                            <div id="p1-history-left" class="history-grid"></div>
-                            <div class="score-display">
-                                <span class="label">Sum</span>
-                                <span id="p1-score-left" class="score-value">0</span>
-                            </div>
-                        </div>
-                        <div id="p1-card-slot-left" class="card-slot">
-                            <!-- Card injected here -->
-                        </div>
-                    </div>
-                    <button id="draw-btn-left" class="btn primary-action lane-btn">
-                        LEFT
-                    </button>
-                </div>
+                <!-- Action (Bottom Outside) -->
+                <button id="draw-btn-left" class="btn action-btn">
+                    DEPLOY (A)
+                </button>
             </div>
 
-            <!-- Lane Center -->
-            <div class="lane lane-center">
-                <div class="lane-title">CENTER LANE</div>
-                <div class="player-zone p2-zone">
-                    <div class="zone-content">
-                        <div id="p2-card-slot-center" class="card-slot">
-                            <!-- Card injected here -->
-                        </div>
-                        <div class="history-container p2-history-container">
-                            <div class="score-display">
-                                <span class="label">Sum</span>
-                                <span id="p2-score-center" class="score-value">0</span>
-                            </div>
-                            <div id="p2-history-center" class="history-grid"></div>
-                        </div>
+            <!-- Front (Center) -->
+            <div class="lane" id="lane-center">
+                <div class="lane-header">
+                    <div class="lane-title">FRONT</div>
+                    <div class="lane-shortcut">S</div>
+                </div>
+
+                <div class="battle-zone">
+                    <!-- CPU -->
+                    <div class="unit-zone p2-unit">
+                        <div id="p2-card-slot-center" class="card-slot"></div>
+                        <div class="score-tag p2-score" id="p2-score-center">0</div>
+                    </div>
+
+                    <!-- History -->
+                    <div class="history-trench">
+                        <div id="p2-history-center" class="history-grid p2-history"></div>
+                        <div class="diff-badge" id="diff-center">0</div>
+                        <div id="p1-history-center" class="history-grid p1-history"></div>
+                    </div>
+
+                    <!-- Player -->
+                    <div class="unit-zone p1-unit">
+                        <div class="score-tag p1-score" id="p1-score-center">0</div>
+                        <div id="p1-card-slot-center" class="card-slot"></div>
                     </div>
                 </div>
 
-                <div class="lane-diff" id="diff-center">0</div>
-
-                <div class="player-zone p1-zone">
-                    <div class="zone-content">
-                        <div class="history-container p1-history-container">
-                            <div id="p1-history-center" class="history-grid"></div>
-                            <div class="score-display">
-                                <span class="label">Sum</span>
-                                <span id="p1-score-center" class="score-value">0</span>
-                            </div>
-                        </div>
-                        <div id="p1-card-slot-center" class="card-slot">
-                            <!-- Card injected here -->
-                        </div>
-                    </div>
-                    <button id="draw-btn-center" class="btn primary-action lane-btn">
-                        CENTER
-                    </button>
-                </div>
+                <button id="draw-btn-center" class="btn action-btn">
+                    DEPLOY (S)
+                </button>
             </div>
 
-            <!-- Lane Right -->
-            <div class="lane lane-right">
-                <div class="lane-title">RIGHT LANE</div>
-                <div class="player-zone p2-zone">
-                    <div class="zone-content">
-                        <div id="p2-card-slot-right" class="card-slot">
-                            <!-- Card injected here -->
-                        </div>
-                        <div class="history-container p2-history-container">
-                            <div class="score-display">
-                                <span class="label">Sum</span>
-                                <span id="p2-score-right" class="score-value">0</span>
-                            </div>
-                            <div id="p2-history-right" class="history-grid"></div>
-                        </div>
+            <!-- Right Flank -->
+            <div class="lane" id="lane-right">
+                <div class="lane-header">
+                    <div class="lane-title">RIGHT FLANK</div>
+                    <div class="lane-shortcut">D</div>
+                </div>
+
+                <div class="battle-zone">
+                    <!-- CPU -->
+                    <div class="unit-zone p2-unit">
+                        <div id="p2-card-slot-right" class="card-slot"></div>
+                        <div class="score-tag p2-score" id="p2-score-right">0</div>
+                    </div>
+
+                    <!-- History -->
+                    <div class="history-trench">
+                        <div id="p2-history-right" class="history-grid p2-history"></div>
+                        <div class="diff-badge" id="diff-right">0</div>
+                        <div id="p1-history-right" class="history-grid p1-history"></div>
+                    </div>
+
+                    <!-- Player -->
+                    <div class="unit-zone p1-unit">
+                        <div class="score-tag p1-score" id="p1-score-right">0</div>
+                        <div id="p1-card-slot-right" class="card-slot"></div>
                     </div>
                 </div>
 
-                <div class="lane-diff" id="diff-right">0</div>
-
-                <div class="player-zone p1-zone">
-                    <div class="zone-content">
-                        <div class="history-container p1-history-container">
-                            <div id="p1-history-right" class="history-grid"></div>
-                            <div class="score-display">
-                                <span class="label">Sum</span>
-                                <span id="p1-score-right" class="score-value">0</span>
-                            </div>
-                        </div>
-                        <div id="p1-card-slot-right" class="card-slot">
-                            <!-- Card injected here -->
-                        </div>
-                    </div>
-                    <button id="draw-btn-right" class="btn primary-action lane-btn">
-                        RIGHT
-                    </button>
-                </div>
+                <button id="draw-btn-right" class="btn action-btn">
+                    DEPLOY (D)
+                </button>
             </div>
 
             <div id="message-area" class="message-area"></div>
