Match RECON drawer layout to lane structure for perfect alignment

--- a/index.html
+++ b/index.html
@@ -170,8 +170,10 @@
                     <div id="p2-deck-grid" class="history-grid p2-history"></div>
                     <div class="recon-card-slot">
                         <div class="recon-power-display">
+                            <div class="recon-power-label">POWER</div>
                             <div class="recon-power-value" id="p2-deck-sum">216</div>
-                            <div class="recon-strike-label">STRIKE: <span id="p2-strike-rating">6.0</span></div>
+                            <div class="recon-strike-label">STRIKE: <span id="p2-strike-rating">6.0</span> <span
+                                    class="strike-delta" id="p2-strike-delta">(+0)</span></div>
                         </div>
                     </div>
                 </div>
@@ -185,8 +187,10 @@
                 <div class="unit-zone p1-unit">
                     <div class="recon-card-slot">
                         <div class="recon-power-display">
+                            <div class="recon-power-label">POWER</div>
                             <div class="recon-power-value" id="p1-deck-sum">216</div>
-                            <div class="recon-strike-label">STRIKE: <span id="p1-strike-rating">6.0</span></div>
+                            <div class="recon-strike-label">STRIKE: <span id="p1-strike-rating">6.0</span> <span
+                                    class="strike-delta" id="p1-strike-delta">(+0)</span></div>
                         </div>
                     </div>
                     <div id="p1-deck-grid" class="history-grid p1-history"></div>
