--- a/index.html
+++ b/index.html
@@ -49,9 +49,16 @@
                 <button id="reset-btn" class="btn tertiary">NEW GAME <span class="shortcut-hint">(R)</span></button>
             </div>
 
-            <!-- Sidebar Results -->
-            <div id="sidebar-results" class="sidebar-results">
-                <!-- Injected via JS -->
+            <div class="divider"></div>
+
+            <!-- Game History Tracker -->
+            <div class="game-history">
+                <div class="history-label">LAST 10 GAMES</div>
+                <div class="history-icons" id="game-history-icons"></div>
+                <div class="history-stats">
+                    <span class="win-count">W: <span id="win-count">0</span></span>
+                    <span class="loss-count">L: <span id="loss-count">0</span></span>
+                </div>
             </div>
         </aside>
 
@@ -166,16 +173,6 @@
         <aside class="reinforcements sidebar">
             <div class="lane-header">
                 <div class="lane-title">RECON</div>
-            </div>
-
-            <!-- Game History Tracker -->
-            <div class="game-history">
-                <div class="history-label">LAST 10 GAMES</div>
-                <div class="history-icons" id="game-history-icons"></div>
-                <div class="history-stats">
-                    <span class="win-count">W: <span id="win-count">0</span></span>
-                    <span class="loss-count">L: <span id="loss-count">0</span></span>
-                </div>
             </div>
 
             <div class="battle-zone">
