--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 
             <!-- Game History Tracker -->
             <div class="game-history">
-                <div class="history-label">LAST 10 GAMES</div>
+                <div class="history-header">
+                    <div class="history-label">LAST 10 GAMES</div>
+                    <button id="clear-history-btn" class="clear-history-btn" title="Clear history">✕</button>
+                </div>
                 <div class="history-icons" id="game-history-icons"></div>
                 <div class="history-stats">
                     <span class="win-count">W: <span id="win-count">0</span></span>
