--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             <div class="game-history">
                 <div class="history-header">
                     <div class="history-label">LAST 10 GAMES</div>
-                    <button id="clear-history-btn" class="clear-history-btn" title="Clear history">✕</button>
+                    <button id="clear-history-btn" class="clear-history-btn"
+                        title="Double-click to clear history">✕</button>
                 </div>
                 <div class="history-icons" id="game-history-icons"></div>
                 <div class="history-stats">
