Complete: Add game result summary HTML to left sidebar

--- a/index.html
+++ b/index.html
@@ -64,6 +64,25 @@
                     <span class="loss-count">L: <span id="loss-count">0</span></span>
                 </div>
             </div>
+
+            <!-- Game Result Summary -->
+            <div class="game-result-summary" id="game-result-summary" style="display: none;">
+                <div class="result-message" id="result-message">YOU WIN</div>
+                <div class="result-breakdown">
+                    <div class="lane-result">
+                        <span class="lane-name">LEFT:</span>
+                        <span class="lane-outcome" id="left-outcome">—</span>
+                    </div>
+                    <div class="lane-result">
+                        <span class="lane-name">CENTER:</span>
+                        <span class="lane-outcome" id="center-outcome">—</span>
+                    </div>
+                    <div class="lane-result">
+                        <span class="lane-name">RIGHT:</span>
+                        <span class="lane-outcome" id="right-outcome">—</span>
+                    </div>
+                </div>
+            </div>
         </aside>
 
         <!-- Center Panel: Battle Arena -->
