Implement Pro (No Peek) and Hard+ (Peek) Difficulty Levels

--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
                 <div class="control-group ai-difficulty-group">
                     <label class="difficulty-label">CPU INTEL:</label>
                     <div class="difficulty-slider">
-                        <input type="range" id="ai-difficulty" min="0" max="2" value="2" step="1">
+                        <input type="range" id="ai-difficulty" min="0" max="3" value="2" step="1">
                         <div class="difficulty-labels">
                             <span>RANDOM</span>
                             <span>EASY</span>
-                            <span>HARD</span>
+                            <span>PRO</span>
+                            <span>HARD+</span>
                         </div>
-                        <span class="difficulty-value" id="ai-difficulty-text">HARD</span>
+                        <span class="difficulty-value" id="ai-difficulty-text">PRO</span>
                     </div>
                 </div>
 
